--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "~1.4.x",
     "angular-ui-router": "~0.2.15",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "howler": "1.1.29"
   }
 }
